created infrastructure to run many sequential experiments; adaptively use LazyTensors in sparse_symbolic based on heuristic; made tensors not requiring grad

--- a/plotting.ipynb
+++ b/plotting.ipynb
@@ -264,6 +264,17 @@
     "cpp_kq3_means = [0.005819797515869141, 0.02500319480895996, 0.08819355964660644, 0.3226898193359375, 1.785881805419922, 4.355342102050781, 16.72867579460144, 58.301800441741946, 207.52339153289796]\n",
     "cpp_kq3_stds = [0.0005436386542092856, 0.0013662773997036293, 0.0024549303970329947, 0.012476227515685705, 1.1895300519776781, 0.1516088748298022, 1.788928071840642, 1.8748678345748209, 8.11425699061844]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# COMPARING THE EFFICIENCY OF sparse_symbolic AND faiss FOR VARIOUS kq_dim\n",
+    "\n",
+    "# keep sym_kqX_means from previous experiment"
+   ]
   }
  ],
  "metadata": {
